# worldclock-tty

./: .gitignore  README.md  chronos.py  pyproject.toml
tests/: test_chronos.py
worldclock_tty/: __init__.py  chronos.py
